--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,11 +1,11 @@
 version: 1.0
-runtime: python312
+runtime: python311
 build:
   commands:
     build:
-      - pip install -r requirements.txt
+      - pip3 install -r requirements.txt
 run:
-  command: uvicorn app:app --host 0.0.0.0 --port $PORT
+  command: python3 -m uvicorn app:app --host 0.0.0.0 --port $PORT
   network:
     port: 8080
   env:
